--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body{
     background-color: #be0000d8;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 4px;
 }
 .links{
     padding-right: 128px;
