--- a/main.css
+++ b/main.css
@@ -1,112 +1,294 @@
 /* Changes for the home page(index.html)*/
-html{
-    margin: 0px;
-    padding: 0px; 
-}
-body{
-    font: normal 16px sans-serif;
-    color:white;
+
+html {
     margin: 0px;
     padding: 0px;
-    background-image: linear-gradient(to right top, #370505, #732c17, #ab5e18, #d59b09, #ebe012);}
+}
 
-    .main-heading{
+body {
+    /*changes to the font, font color and size for the whole web page*/
+    font: normal 16px sans-serif;
+    color: white;
+    margin: 0px;
+    padding: 0px;
+    background-image: url("images/stars-at-night.jpg");
+    ;
+}
+
+.main-heading {
+    /*changes to the main header*/
     text-align: center;
-    background-color: #be0000d8;
+    background-color: #eb6712;
     padding-top: 1px;
 }
 
-.navbar{
-    position: fixed;
-    background-color: #be0000d8;
+.navbar {
+    background-color: #eb6712;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 4px;
+    padding-right: 41px;
 }
-.links{
-    padding-right: 128px;
-    padding-left: 52px;
+
+.links {
+    padding-right: 134px;
+    padding-left: 38px;
     font-weight: bold;
     margin: 0px;
 }
-.navbar a{
-    color:white;
+
+.navbar a {
+    color: white;
 }
-.links:hover{
+
+.links:hover {
     background-color: orangered;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-.quote{
+.quote {
     font-size: 45px;
     text-align: center;
     padding: 50px;
+    border: black dotted 5px;
+    width: min-content;
 }
 
+th ,.quote-border {
+    column-gap: 0px;
+}
+
+.right-side{
+    column-gap: 0px;
+}
 .footer-decor {
-background-color: #be0000d8;
-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-box-sizing: border-box;
-width: 100%;
-text-align: left;
-font: normal 16px sans-serif;
-padding: 45px 50px;
+    position: relative;
+    width: 100%;
+    background-color: #eb6712;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: normal 16px sans-serif;
+    padding: 45px 50px;
+    bottom: 0px;
 }
 
 .footer-decor .footer-left p {
-color: #8f9296;
-font-size: 14px;
-margin: 0;
+    color: #383838;
+    font-size: 14px;
+    margin: 0;
 }
+
+
 /* Footer links */
 
 .footer-decor p.footer-links {
-font-size: 18px;
-font-weight: bold;
-color: #ffffff;
-margin: 0 0 10px;
-padding: 0;
-
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0 0 10px;
+    padding: 0;
 }
 
 .footer-decor p.footer-links a {
-display: inline-block;
-line-height: 1.8;
-text-decoration: none;
-color: inherit;
-transition: ease .25s;
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+    transition: ease .25s;
 }
 
 .footer-decor .footer-links a:before {
-content: "·";
-font-size: 20px;
-left: 0;
-color: #fff;
-display: inline-block;
-
+    content: "·";
+    font-size: 20px;
+    left: 0;
+    color: #fff;
+    display: inline-block;
 }
 
 .footer-decor .footer-links .link-1:before {
-content: none;
+    content: none;
 }
 
 .footer-decor .footer-right {
-float: right;
-margin-top: 6px;
-max-width: 180px;
+    float: right;
+    margin-top: 6px;
+    max-width: 180px;
 }
 
-.footer-decor p.footer-links a:hover{text-decoration:underline;}
+.footer-decor p.footer-links a:hover {
+    text-decoration: underline;
+}
+
 
 /*Changes to About page(about.html)*/
 
-.profile{
+.profile {
     padding-top: 40px;
     text-align: center;
 }
-img{
+.my-photo{
+    width:300px;
+    height:400px;
+    border-radius: 50px;
+}
+
+img,
+.person-photo {
     border-radius: 20px;
-    width: 500px;
-    height: 233px;
+    width: 300px;
+    height: 325px;
+}
+
+.icon-links2 {
+    width: 60px;
+    height: 50px;
+}
+
+.icon-links1 {
+    width: 86px;
+    height: 50px;
+}
+
+
+/*testimonial changes(testimonial.html)*/
+
+.cards {
+    background-color: transparent;
+    width: 300px;
+    height: 325px;
+    perspective: 1000px;
+    display: inline-block;
+    padding-top: 20px;
+    padding-inline: 59px;
+    padding-bottom: 20px;
+}
+
+.flip-inside-card {
+    position: relative;
+    width: 100%;
+    height: 325px;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.cards:hover .flip-inside-card {
+    transform: rotateY(180deg);
+}
+
+.flip-to-front,
+.flip-to-back {
+    position: absolute;
+    width: 100%;
+    height: 325px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-to-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-to-back {
+    background-color: #ffffff;
+    color: rgb(135, 0, 0);
+    transform: rotateY(180deg);
+}
+
+
+/*portfolio changes*/
+
+h1{
+    text-align: center;
+}
+.row1,
+.row2,
+.row3 {
+    display: flex;
+    padding-right: 10px;
+}
+
+.row1::after,
+.row2::after,
+.row3::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    padding: 30px;
+}
+
+.text-appear,
+.project-info {
+    background-color: #ffffff;
+    color: red;
+    width: min-content;
+    padding: 15px;
+}
+
+.project-pic {
+    width: 240px;
+    height: 270px;
+}
+
+
+/*contact changes(contact.html)*/
+
+.outer-form {
+    padding: 10px;
+}
+
+.form-layout {
+    margin: 0 auto;
+    border-radius: 5px;
+    border: yellow solid 5px;
+    width: fit-content;
+    padding: 42px;
+}
+
+.contact {
+    text-align: center;
+}
+
+.form-input {
+    border-radius: 5px;
+    height: 30px;
+    width: 300px;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    border-radius: 5px;
+}
+
+#submit-form {
+    border-radius: 5px;
+    height: 30px;
+    width: 300px;
+    background-color: #eb6712;
+}
+
+#submit-form:hover {
+    background-color: #ebda00;
+}
+
+#clear-form {
+    border-radius: 5px;
+    height: 30px;
+    width: 300px;
+    background-color: #eb6712
+}
+
+#clear-form:hover {
+    background-color: #2b00eb;
+}
+
+.contacts-under-form{
+    text-align: center;
 }
