--- a/main.css
+++ b/main.css
@@ -11,19 +11,19 @@ body {
     color: white;
     margin: 0px;
     padding: 0px;
-    background-image: url("images/stars-at-night.jpg");
-    ;
+    background-image: linear-gradient(to top, #0066ff, #0f54f3, #1d40e6, #2929d8, #3300c9);
 }
 
 .main-heading {
     /*changes to the main header*/
     text-align: center;
-    background-color: #eb6712;
-    padding-top: 1px;
+    background-image: url("images/stars-at-night.jpg");
+    padding-top: 80px;
+    padding-bottom: 100px;
 }
 
 .navbar {
-    background-color: #eb6712;
+    background-image: url("images/stars-at-night.jpg");
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 41px;
@@ -41,30 +41,36 @@ body {
 }
 
 .links:hover {
-    background-color: orangered;
+    background-color: rgb(24, 0, 82);
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
+.quote-border{
+    padding-right:80px;
+    height: 345px;
+}
 .quote {
     font-size: 45px;
     text-align: center;
-    padding: 50px;
     border: black dotted 5px;
-    width: min-content;
 }
-
-th ,.quote-border {
-    column-gap: 0px;
+table{
+    padding-left: 150px;
 }
 
 .right-side{
-    column-gap: 0px;
+    padding-right: 115px;
+}
+
+.next-to-quote{
+    width: 80%;
+    height: 50%;
 }
 .footer-decor {
     position: relative;
     width: 100%;
-    background-color: #eb6712;
+    background-image: url("images/stars-at-night.jpg");
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -75,7 +81,7 @@ th ,.quote-border {
 }
 
 .footer-decor .footer-left p {
-    color: #383838;
+    color: #7a7a7a;
     font-size: 14px;
     margin: 0;
 }
@@ -129,8 +135,7 @@ th ,.quote-border {
     text-align: center;
 }
 .my-photo{
-    width:300px;
-    height:400px;
+    height: 50%;
     border-radius: 50px;
 }
 
@@ -193,8 +198,8 @@ img,
 }
 
 .flip-to-back {
-    background-color: #ffffff;
-    color: rgb(135, 0, 0);
+    background-color: #000cb6;
+    color: rgb(255, 255, 255);
     transform: rotateY(180deg);
 }
 
@@ -220,17 +225,20 @@ h1{
 }
 
 .column {
-    padding: 30px;
+    padding: 25px;
 }
 
 .text-appear,
 .project-info {
-    background-color: #ffffff;
-    color: red;
+    background-color: dodgerblue;
+    color: rgb(255, 255, 255);
     width: min-content;
     padding: 15px;
 }
-
+.column:hover{
+    box-shadow:0 0 5px rgb(145, 193, 255);
+    transition: opacity 1 ease-in-out;
+}
 .project-pic {
     width: 240px;
     height: 270px;
@@ -246,9 +254,10 @@ h1{
 .form-layout {
     margin: 0 auto;
     border-radius: 5px;
-    border: yellow solid 5px;
+    border: #129ceb groove 5px;
     width: fit-content;
     padding: 42px;
+    width: min-content;
 }
 
 .contact {
@@ -271,22 +280,24 @@ textarea {
     border-radius: 5px;
     height: 30px;
     width: 300px;
-    background-color: #eb6712;
+    background-color: #129ceb;
 }
 
 #submit-form:hover {
-    background-color: #ebda00;
+    background-color: #006416;
+    transition: 1s;
 }
 
 #clear-form {
     border-radius: 5px;
     height: 30px;
     width: 300px;
-    background-color: #eb6712
+    background-color: #129ceb
 }
 
 #clear-form:hover {
-    background-color: #2b00eb;
+    background-color: #00439b;
+    transition: 1s;
 }
 
 .contacts-under-form{
